tests/type_errors/generic_list_field_access.nos
# expect_error: no field
# Field access on generic list result through function
f(xs) = xs.sort().name
main() = f([1, 2, 3])
